[package]
name = "turborepo-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = { workspace = true }
env_logger = "0.10.0"
tempfile = { workspace = true }

[dependencies]
base64 = "0.21.0"
bytes.workspace = true
chrono = { workspace = true }
dunce = { workspace = true }
lazy_static = { workspace = true }
log.workspace = true
os_str_bytes = "6.5.0"
ring = "0.16.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = "0.4.38"
thiserror = { workspace = true }
turbopath = { workspace = true }
turborepo-api-client = { workspace = true }
zstd = "0.12.3"
